# kmath

./: .gitignore  CMakeLists.txt  LICENSE  build.sh  premake5.lua
examples/: CMakeLists.txt  build.lua
examples/src/: camera.cpp  color_spaces.cpp  ease_function.cpp  examples.hpp  main.cpp  motor_transforms.cpp  oklab_interpolation.cpp  pga_visualization.cpp  rotor_motor.cpp
examples/src/utils/: freecam.cpp  freecam.hpp  math.cpp  pga.cpp  pga.hpp
kmath/: CMakeLists.txt  angles.hpp  base.hpp  build.lua  color.cpp  color.hpp  concepts.hpp  constants.hpp  defines.hpp  euclidian_flat_3d.hpp  interpolation_functions.hpp  kmath.cpp  kmath.hpp  kpga.hpp  matrix.hpp  motor_3d.hpp  pga_3d.hpp  print.hpp  rotor_3d.hpp  utils.hpp  vector.hpp
kmath/color/: base.cpp  base.hpp  cie.cpp  cie.hpp  itu.cpp  itu.hpp  ok.cpp  ok.hpp
kmath/private/: defines.hpp
premake/: build_config.lua
premake/ecc/: LICENSE.md  README.md  _preload.lua  ecc.lua
test/: build.lua
test/src/: camera.cpp  dquat_transforms.cpp  main.cpp  pga_visualization.cpp  quat_dquat.cpp  tests.hpp
test/src/utils/: freecam.cpp  freecam.hpp  math.cpp  math.hpp  pga.cpp  pga.hpp
unit_tests/: CMakeLists.txt  build.lua
unit_tests/src/: csi.hpp  main.cpp  testing.cpp  testing.hpp
unit_tests/src/tests/: angles.cpp  angles.hpp  colors.cpp  colors.hpp  euclidian_flat_3d.cpp  euclidian_flat_3d.hpp  matrix.cpp  matrix.hpp  rotor_3d.cpp  rotor_3d.hpp  vector.cpp  vector.hpp
